# RealsenseReader

./: CMakeLists.txt  LICENSE  README.md
include/realsense_reader/: image_handler.hpp  unit_test.hpp
src/: image_handler.cpp  main.cpp  unit_test.cpp
